language/move-lang/tests/move_check/typing/exp_list_nested.exp
error: 

   ┌── tests/move_check/typing/exp_list_nested.move:5:15 ───
   │
 5 │     fun t0(): (u64, S, R<u64>) {
   │               ---------------- Is not compatible with the expression list type of length 3: '(u64, 0x8675309::M::S, 0x8675309::M::R<u64>)'
 6 │         (0, (S{}, R{}))
   │         --------------- The expression list type of length 2: '({integer}, (0x8675309::M::S, 0x8675309::M::R<_>))'
   │         ^^^^^^^^^^^^^^^ Invalid return expression
   │

error: 

   ┌── tests/move_check/typing/exp_list_nested.move:6:9 ───
   │
 6 │         (0, (S{}, R{}))
   │         ^^^^^^^^^^^^^^^ Invalid expression list type argument
   │             ---------- Expected a single type, but found expression list type: '(0x8675309::M::S, 0x8675309::M::R<_>)'
   │

error: 

   ┌── tests/move_check/typing/exp_list_nested.move:6:19 ───
   │
 6 │         (0, (S{}, R{}))
   │                   ^^^ Could not infer this type. Try adding an annotation
   │

